--- a/scenarios/base/config.yaml
+++ b/scenarios/base/config.yaml
@@ -2,12 +2,14 @@ SYSTEM:
     HEADER: "base_"
     SEED: 100
 PATHS:
-    PROFILES_PATH: "scenarios/base/profiles.yaml"
-    DUMP_PATH: "scenarios/base/out/"
+    PROFILES_PATH: "profiles.yaml"
+    DUMP_PATH: "out/"
 RUN:
     MODEL: "Base"
-    ITERS: 90
+    ITERS: 60
     POP: 10000
+    POP_DIST: "distrib.npy"
     INIT_S: 0.999
     INIT_I: 0.001
     INIT_R: 0
+    PROJECTION: "Age"
